kubernetes/labs/lab7-ingress/sa-webapp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sa-webapp
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-webapp
    spec:
      containers:
      - image: mihailrc/sa-webapp
        imagePullPolicy: Always
        name: sa-webapp
        ports:
          - containerPort: 8080
