kubernetes/labs/lab7-ingress/sa-logic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-logic-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: sa-logic
