kubernetes/labs/lab7-ingress/sa-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-webapp-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: sa-webapp
