kubernetes/labs/lab7-ingress/service-sa-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-webapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: sa-webapp
