kubernetes/labs/lab7-ingress/sa-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sa-ingress-frontend
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: sa-frontend-lb
          servicePort: 80
      - path: /sentiment
        backend:
          serviceName: sa-webapp-lb
          servicePort: 80
